2006-08-18  Andrew Johnson  <acjgenius@earthlink.net>

	* engines/hc/src/hc-style.c: (hc_draw_expander):
	* engines/hc/src/hc_gtk2_drawing.h:
	* engines/hc/src/hc_gtk2_engine.c: (hc_style_class_init):

	- Use the base/text values for expander arrow

2006-08-18  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/industrial/src/industrial_style.c:
	(draw_rounded_gradient), (draw_rounded_rect), (real_draw_box),
	(draw_box), (draw_option):
	- add a slight shadow to the radiobutton
	- change in draw_rounded_gradient to prevent blank pixel
	in the corners of buttons.
	- fixed menuitem border opacity
	- small cleanup

	* themes/Industrial/gtk-2.0/gtkrc:
	- Tweak the WnckTasklist glowing
	- cleanups

2006-08-18  Andrew Johnson  <acjgenius@earthlink.net>

	* engines/hc/src/hc-style.c: (hc_draw_check):

	- Improve Visibility/Contrast of Checks, Still not right, but better

2006-08-17  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/industrial/src/industrial_style.c: (draw_slider),
	(draw_check):
	- added shadow to checkbutton

	* themes/Industrial/gtk-2.0/gtkrc:
	- enable trough-side-details
	- activate sliders
	- set x/ythickness of GtkProgress to 0px
	- some cleanups

2006-08-16  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/industrial/src/industrial_style.c: (draw_focus):
	- remove some debugging cruft

2006-08-16  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/industrial/src/industrial_style.c: (real_draw_box),
	(draw_focus), (draw_shadow):
	* engines/industrial/src/industrial_style_versioned_code.h:
	- Implement a focus for GtkEntry
	- Some cleanups.

	* themes/Industrial/gtk-2.0/gtkrc:
	- Use the focus for GtkEntry
	- Some other small changes

2006-08-15  Andrew Johnson  <acjgenius@earthlink.net>

	* engines/glide/src/glide_gtk2_support.c:
	(glide_draw_pattern_fill):
	- Fix Pattern Translate offset

2006-08-15  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/animation.c:
	* engines/clearlooks/src/animation.h:
